--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
+DB_TEST_DATABASE=testing
 DB_USERNAME=root
 DB_PASSWORD=
 DB_TEST_DATABASE=
